[tool.poetry]
name = "snake-package"
version = "1.0.0"
description = "Ein schnelles und unterhaltsames Spiel"
authors = ["Anwar"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.1.2"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
